fjord-compiler/test/errors/uniqueness/Wasteful.fj
module errors.uniqueness.Wasteful

wasteful : Int -* Int -* Int
wasteful a b =
  a
